--- a/app/src/main/res/layout/alert_view.xml
+++ b/app/src/main/res/layout/alert_view.xml
@@ -7,59 +7,72 @@
     android:layout_height="match_parent"
     tools:context="com.rstack.dephone.AlertView">
 
-    <android.support.v7.widget.CardView
-        android:id="@+id/alert_card"
-        android:layout_width="320dp"
-        android:layout_height="240dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
-        app:cardCornerRadius="5dp">
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <android.support.v7.widget.CardView
+            android:id="@+id/alert_card"
+            android:layout_width="321dp"
+            android:layout_height="0dp"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="180dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="180dp"
+            app:cardCornerRadius="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-            <Button
-                android:id="@+id/skip_alert_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginBottom="14dp"
-                android:layout_marginEnd="15dp"
-                android:text="skip" />
+            <RelativeLayout
+                android:layout_width="321dp"
+                android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/Static_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:layout_marginTop="22dp"
-                android:text="App Time Limit Exceeded"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-                android:textSize="30sp" />
+                <Button
+                    android:id="@+id/skip_alert_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginBottom="14dp"
+                    android:layout_marginEnd="15dp"
+                    android:text="skip" />
 
-            <Button
-                android:id="@+id/close_app_btn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignBaseline="@+id/skip_alert_btn"
-                android:layout_alignBottom="@+id/skip_alert_btn"
-                android:layout_centerHorizontal="true"
-                android:text="Close" />
+                <TextView
+                    android:id="@+id/Static_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="22dp"
+                    android:text="App Time Limit Exceeded"
+                    android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                    android:textSize="30sp" />
 
-            <TextView
-                android:id="@+id/appName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_above="@+id/close_app_btn"
-                android:layout_centerHorizontal="true"
-                android:layout_marginBottom="30dp"
-                android:text="TextView" />
-        </RelativeLayout>
+                <Button
+                    android:id="@+id/close_app_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@+id/skip_alert_btn"
+                    android:layout_alignBottom="@+id/skip_alert_btn"
+                    android:layout_centerHorizontal="true"
+                    android:text="Close" />
 
-    </android.support.v7.widget.CardView>
+                <TextView
+                    android:id="@+id/appName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_above="@+id/close_app_btn"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginBottom="30dp"
+                    android:text="TextView" />
+            </RelativeLayout>
+
+        </android.support.v7.widget.CardView>
+    </android.support.constraint.ConstraintLayout>
+
 </android.widget.RelativeLayout>
