--- a/app/src/main/res/layout/cardview_layout.xml
+++ b/app/src/main/res/layout/cardview_layout.xml
@@ -1,17 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
 
     android:id="@+id/card_view"
     android:layout_width="fill_parent"
     android:layout_height="70dp"
-    card_view:cardElevation="5dp"
-    card_view:contentPadding="5dp"
-    card_view:cardCornerRadius="5dp"
-    card_view:cardMaxElevation="5dp"
     android:layout_margin="5dp"
-    >
+    card_view:cardCornerRadius="1dp"
+    card_view:cardElevation="0dp"
+    card_view:cardMaxElevation="5dp"
+    card_view:contentPadding="5dp">
+
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="60dp"
